--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
     </section><!-- Akhir Dari Pendahuluan -->
 
-    <!-- ======= Why Us Section ======= -->
+    <!-- ======= Pengertian Pajak ======= -->
     <section id="why-us" class="why-us section-bg">
       <div class="container-fluid" data-aos="fade-up">
 
@@ -122,9 +122,9 @@
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section><!-- Akhir Pengertian Pajak -->
 
-    <!-- ======= Skills Section ======= -->
+    <!-- ======= Pihak Yang Terkait Dengan Pajak ======= -->
     <section id="skills" class="skills">
       <div class="container" data-aos="fade-up">
 
@@ -133,43 +133,21 @@
             <img src="assets/img/skills.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates</h3>
+            <h3>Pihak Pihak Yang Terkait Dengan Pajak</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Pihak yang terkait dalam pajak meliputi:
+1. Pemerintah: Pemerintah memiliki peran sentral dalam menetapkan kebijakan pajak, 
+mengumpulkan pendapatan pajak, dan menggunakan dana tersebut untuk membiayai pengeluaran pemerintah. <br>
+
+2. Warga Negara dan Warga Hukum: Individu, keluarga, dan perusahaan adalah pihak yang membayar pajak.
+ Mereka memiliki kewajiban untuk membayar pajak sesuai dengan peraturan yang berlaku. <br>
+
+3. Otoritas Pajak: Otoritas pajak, seperti Direktorat Jenderal Pajak di Indonesia, 
+bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-undang yang berlaku. <br>
+
             </p>
 
-            <div class="skills-content">
-
-              <div class="progress">
-                <span class="skill">HTML <i class="val">100%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">CSS <i class="val">90%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">JavaScript <i class="val">75%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">Photoshop <i class="val">55%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-            </div>
+            
 
           </div>
         </div>
