--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Oajak Dalam Stabilisasi Ekonomi</title>
+  <title>Pajak Dalam Stabilisasi Ekonomi</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -135,65 +135,87 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h3>Pihak Pihak Yang Terkait Dengan Pajak</h3>
             <p class="fst-italic">
-              Pihak yang terkait dalam pajak meliputi:
+              Pihak yang terkait dalam pajak meliputi:<br>
+
 1. Pemerintah: Pemerintah memiliki peran sentral dalam menetapkan kebijakan pajak, 
-mengumpulkan pendapatan pajak, dan menggunakan dana tersebut untuk membiayai pengeluaran pemerintah. <br>
+mengumpulkan pendapatan pajak, dan menggunakan dana tersebut untuk membiayai pengeluaran pemerintah. <br><br>
 
 2. Warga Negara dan Warga Hukum: Individu, keluarga, dan perusahaan adalah pihak yang membayar pajak.
- Mereka memiliki kewajiban untuk membayar pajak sesuai dengan peraturan yang berlaku. <br>
+ Mereka memiliki kewajiban untuk membayar pajak sesuai dengan peraturan yang berlaku. <br><br>
 
 3. Otoritas Pajak: Otoritas pajak, seperti Direktorat Jenderal Pajak di Indonesia, 
-bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-undang yang berlaku. <br>
+bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-undang yang berlaku. <br><br>
 
             </p>
-
-            
 
           </div>
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section><!-- Akhir Pihak Pihak -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Keuntungan Pajak dalam Stabilisasi Ekonomi</h2>
+
         </div>
 
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Pengaturan Kegiatan Ekonomi</a></h4>
+              <p>Pajak dapat digunakan sebagai alat untuk mengatur kegiatan ekonomi. 
+                Pemerintah dapat memberlakukan tarif pajak yang berbeda-beda untuk mendorong 
+                atau menghambat kegiatan ekonomi tertentu. Misalnya, pemerintah dapat memberikan
+                 insentif pajak yang rendah atau pemotongan pajak kepada sektor industri tertentu 
+                 untuk mendorong investasi dan pertumbuhan ekonomi. Di sisi lain, pemerintah juga 
+                 dapat memberlakukan pajak yang lebih tinggi pada barang-barang mewah atau kegiatan 
+                 yang berdampak negatif pada lingkungan, dengan tujuan mengurangi konsumsi dan dampak 
+                 negatif tersebut.</p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspici</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Stabilitas Fiskal</a></h4>
+              <p>Pajak berperan dalam menjaga keseimbangan antara penerimaan dan pengeluaran pemerintah, 
+                yang dikenal sebagai stabilitas fiskal. Penerimaan pajak yang memadai memungkinkan
+                pemerintah untuk membiayai pengeluaran yang diperlukan, seperti infrastruktur, 
+                layanan publik, dan program sosial. Ketika penerimaan pajak lebih rendah dari 
+                pengeluaran, pemerintah dapat mengalami defisit fiskal yang dapat mengganggu 
+                stabilitas ekonomi. Oleh karena itu, pajak berperan dalam memastikan bahwa penerimaan 
+                pemerintah mencukupi untuk mendukung pengeluaran yang diperlukan.</p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Redistribusi Kekayaan</a></h4>
+              <p>Pajak juga dapat digunakan untuk mencapai tujuan redistribusi kekayaan dalam masyarakat. 
+                Dengan menerapkan pajak progresif, di mana individu dengan pendapatan yang lebih tinggi 
+                dikenakan tarif pajak yang lebih tinggi, pemerintah dapat mengurangi ketimpangan 
+                ekonomi dan meningkatkan keadilan sosial. Pendapatan dari pajak yang diterima dari
+                 kelompok yang lebih kaya dapat dialokasikan untuk menyediakan bantuan sosial, 
+                 pendidikan, atau program pelatihan untuk kelompok yang kurang mampu, sehingga 
+                 meningkatkan mobilitas sosial dan mengurangi kesenjangan sosial.</p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">Stimulus Ekonomi</a></h4>
+              <p>Pajak juga dapat digunakan sebagai alat stimulus ekonomi dalam situasi ketidakstabilan 
+                ekonomi. Pemerintah dapat mengurangi tarif pajak atau memberikan insentif pajak kepada 
+                individu dan perusahaan dalam upaya meningkatkan belanja konsumen dan investasi. 
+                Langkah-langkah ini dapat mendorong pertumbuhan ekonomi, menciptakan lapangan kerja,
+                 dan merangsang aktivitas ekonomi secara keseluruhan.</p>
             </div>
           </div>
 
