--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Wildan Fathoni</a></h1>
+      <h3 class="logo me-auto"><a href="index.html">Wildan Fathoni</a></h3>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -60,9 +60,6 @@
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Pajak Dalam Stabilisasi Ekonomi</h1>
           <h2>Apa sih Pajak Itu ? Kita simak bersama yuk. </h2>
-          <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="https://www.youtube.com/@DitjenPajakRI/featured" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Nonton Video Seputar Pajak Disini</span></a>
-          </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
           <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
@@ -154,7 +151,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
       </div>
     </section><!-- Akhir Pihak Pihak -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Keuntungan Pajak ======= -->
     <section id="services" class="services section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -222,24 +219,24 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section><!-- akhir Keuntungan Pajak -->
 
-    <!-- ======= Cta Section ======= -->
+    <!-- ======= Link Ke Youtube Direktorat Pajak ======= -->
     <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
 
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3>Simak Video</h3>
+            <p> Lihat Video Seputar Pajak Langsung Dari Channel Youtube Direktorat Jenderal Pajak.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+            <a class="cta-btn align-middle" href="https://www.youtube.com/@DitjenPajakRI/videos">Visit Link</a>
           </div>
         </div>
 
       </div>
-    </section><!-- End Cta Section -->
+    </section><!-- Akhir Link -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
