--- a/index.html
+++ b/index.html
@@ -238,20 +238,20 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
       </div>
     </section><!-- Akhir Link -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Contoh Pajak Di Indonesia ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Contoh Pajak Di Indonesia</h2>
+          <p>Di Indonesia, terdapat beberapa jenis pajak yang diterapkan, antara lain:  </p>
         </div>
 
         <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-          <li data-filter="*" class="filter-active">All</li>
-          <li data-filter=".filter-app">App</li>
-          <li data-filter=".filter-card">Card</li>
-          <li data-filter=".filter-web">Web</li>
+          <li data-filter="*" class="filter-active">PPH</li>
+          <li data-filter=".filter-app">PPN</li>
+          <li data-filter=".filter-card">PBB</li>
+          <li data-filter=".filter-web">PBM</li>
         </ul>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
