--- a/index.html
+++ b/index.html
@@ -251,20 +251,20 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
           <li data-filter="*" class="filter-active">PPH</li>
           <li data-filter=".filter-app">PPN</li>
           <li data-filter=".filter-card">PBB</li>
-          <li data-filter=".filter-web">PBM</li>
+          <li data-filter=".filter-web">PMB</li>
         </ul>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
-              <div class="icon-box">
-                <div class="icon"><i class="bx bx-layer"></i></div>
-                <h4><a href="">Stimulus Ekonomi</a></h4>
-                <p>Pajak Penghasilan (PPh): Pajak ini dikenakan pada pendapatan individu dan perusahaan. 
-                  Tarif PPh dapat bervariasi tergantung pada jumlah pendapatan yang diterima.</p>
-              </div>
+            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>App 1</h4>
+              <p>App</p>
+              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""></div>
