--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
           <li data-filter=".filter-card">PBB</li>
           <li data-filter=".filter-web">PBM</li>
         </ul>
-
-        <div class="row">
+      <center>
+        <div class="row" >
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
@@ -292,6 +292,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
           </div>
 
         </div>
+      </center>
 
       </div>
     </section><!-- End Portfolio Section -->
