--- a/index.html
+++ b/index.html
@@ -351,19 +351,19 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
           <p>Pajak memiliki hubungan yang erat dengan ekonomi. Melalui pengaturan tarif dan struktur pajak, 
             pemerintah dapat mempengaruhi kegiatan ekonomi, mendorong pertumbuhan sektor tertentu, 
             dan mengurangi ketimpangan ekonomi. Pajak juga berperan dalam menjaga stabilitas fiskal, 
-            yaitu keseimbangan antara penerimaan dan pengeluaran pemerintah. <br>
+            yaitu keseimbangan antara penerimaan dan pengeluaran pemerintah. <br><br>
             Meskipun pajak memiliki peran yang penting dalam stabilisasi ekonomi, 
             penting juga untuk memperhatikan desain pajak yang tepat. Tarif dan struktur 
             pajak yang tidak seimbang, pajak yang terlalu tinggi, atau sistem pajak yang 
             rumit dapat menghambat pertumbuhan ekonomi dan daya saing. Oleh karena itu, perlu 
             ada kebijakan pajak yang cermat dan efisien untuk mencapai tujuan stabilisasi ekonomi 
-            dan pertumbuhan yang berkelanjutan. <br>
+            dan pertumbuhan yang berkelanjutan. <br><br>
             Dalam konteks Indonesia, pemerintah terus melakukan reformasi perpajakan untuk 
             meningkatkan efektivitas dan efisiensi sistem pajak. Beberapa kebijakan telah dilakukan, 
             seperti pemangkasan tarif pajak penghasilan, perluasan basis pajak, peningkatan 
             kepatuhan pajak, dan peningkatan transparansi. Melalui langkah-langkah ini, diharapkan 
             pajak dapat memainkan peran yang lebih efektif dalam stabilisasi ekonomi dan menciptakan 
-            keadilan sosial. <br>
+            keadilan sosial. <br><br>
             Dalam kesimpulannya, pajak memainkan peran penting dalam stabilisasi ekonomi.
             Melalui pengaturan tarif dan struktur pajak yang tepat, pemerintah dapat mengumpulkan 
             pendapatan yang diperlukan, mengatur kegiatan ekonomi, dan mencapai tujuan redistribusi
@@ -383,14 +383,12 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
           <div class="col-lg-6">
             <h4>Ayo Bayar Pajak Sekarang Juga !</h4>
             
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
+            
           </div>
         </div>
       </div>
     </div>
-
+   <center>
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -424,10 +422,10 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
         </div>
       </div>
     </div>
-
+   </center>
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Arsha</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Wildan</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
