--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
         
 
   <!-- ======= Footer ======= -->
-  <center><footer id="footer">
+  <footer id="footer">
 
     <div class="footer-newsletter">
       <div class="container">
@@ -392,7 +392,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
     <div class="footer-top">
       <div class="container">
         <div class="row">
-
+          <center>
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Wildan Fathoni</h3>
             <p>
@@ -406,7 +406,9 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Social Networks Direktorat Jenderal Pajak</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+            <p>Ikuti media sosial Direktorat Jenderal Pajak untuk mengetahui
+               hal hal seputar pajak.
+            </p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -415,11 +417,11 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
-
+        </center>
         </div>
       </div>
     </div>
-   </center>
+  
     <div class="container footer-bottom clearfix">
       <div class="copyright">
         &copy; Copyright <strong><span>Wildan</span></strong>. All Rights Reserved
