--- a/index.html
+++ b/index.html
@@ -352,12 +352,6 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
             pemerintah dapat mempengaruhi kegiatan ekonomi, mendorong pertumbuhan sektor tertentu, 
             dan mengurangi ketimpangan ekonomi. Pajak juga berperan dalam menjaga stabilitas fiskal, 
             yaitu keseimbangan antara penerimaan dan pengeluaran pemerintah. <br><br>
-            Meskipun pajak memiliki peran yang penting dalam stabilisasi ekonomi, 
-            penting juga untuk memperhatikan desain pajak yang tepat. Tarif dan struktur 
-            pajak yang tidak seimbang, pajak yang terlalu tinggi, atau sistem pajak yang 
-            rumit dapat menghambat pertumbuhan ekonomi dan daya saing. Oleh karena itu, perlu 
-            ada kebijakan pajak yang cermat dan efisien untuk mencapai tujuan stabilisasi ekonomi 
-            dan pertumbuhan yang berkelanjutan. <br><br>
             Dalam konteks Indonesia, pemerintah terus melakukan reformasi perpajakan untuk 
             meningkatkan efektivitas dan efisiensi sistem pajak. Beberapa kebijakan telah dilakukan, 
             seperti pemangkasan tarif pajak penghasilan, perluasan basis pajak, peningkatan 
@@ -407,7 +401,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Social Networks Direktorat Jenderal Pajak</h4>
             <p>Ikuti media sosial Direktorat Jenderal Pajak untuk mengetahui
-               hal hal seputar pajak.
+               hal-hal seputar pajak.
             </p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
