--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h3 class="logo me-auto"><a href="index.html">Wildan Fathoni</a></h3>
+      <h3 class="logo me-auto"><a href="index.html"></a></h3>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -387,7 +387,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
       <div class="container">
         <div class="row">
          
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0">
             <h3>Wildan Fathoni</h3>
             <p>
               Cikarang Selatan <br>
@@ -398,7 +398,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
             </p>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0">
             <h4>Social Networks Direktorat Jenderal Pajak</h4>
             <p>Ikuti media sosial Direktorat Jenderal Pajak untuk mengetahui
                hal-hal seputar pajak.
