--- a/index.html
+++ b/index.html
@@ -385,9 +385,10 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
    
     <div class="footer-top">
       <div class="container">
+        <center>
         <div class="row">
          
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0">
+          <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Wildan Fathoni</h3>
             <p>
               Cikarang Selatan <br>
@@ -398,7 +399,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
             </p>
           </div>
 
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0">
+          <div class="col-lg-3 col-md-6 footer-links">
             <h4>Social Networks Direktorat Jenderal Pajak</h4>
             <p>Ikuti media sosial Direktorat Jenderal Pajak untuk mengetahui
                hal-hal seputar pajak.
@@ -413,6 +414,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
           </div>
         
         </div>
+      </center>
       </div>
     </div>
   
