--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
       </div>
     </div>
     
-    <div class="footer-top">
+    <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
       <div class="container">
        
         <div class="row">
