--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
       
         <div class="row">
          
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <h3>Wildan Fathoni</h3>
             <p>
               Cikarang Selatan <br>
@@ -399,7 +399,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
             </p>
           </div>
 
-          <div class="col-lg-6 col-md-9 footer-links">
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <h4>Social Networks Direktorat Jenderal Pajak</h4>
             <p>Ikuti media sosial Direktorat Jenderal Pajak untuk mengetahui
                hal-hal seputar pajak.
