--- a/index.html
+++ b/index.html
@@ -387,19 +387,8 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
       <div class="container">
       
         <div class="row">
-         
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <h3>Wildan Fathoni</h3>
-            <p>
-              Cikarang Selatan <br>
-              Bekasi, Jawa Barat<br>
-              Indonesia <br><br>
-              <strong>Telepon:</strong> +6285162626145<br>
-              <strong>Email:</strong> wildanfathoni18@gmail.com<br>
-            </p>
-          </div>
 
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-6 col-md-9 footer-links">
             <h4>Social Networks Direktorat Jenderal Pajak</h4>
             <p>Ikuti media sosial Direktorat Jenderal Pajak untuk mengetahui
                hal-hal seputar pajak.
