--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
         
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+  <center><footer id="footer">
 
     <div class="footer-newsletter">
       <div class="container">
@@ -382,7 +382,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
         </div>
       </div>
     </div>
-    <center>
+   
     <div class="footer-top">
       <div class="container">
         
