--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <center><div class="icon"><i class="bx bxl-dribbble"></i></div></center>
               <h4><a href="">Pengaturan Kegiatan Ekonomi</a></h4>
               <p>Pajak dapat digunakan sebagai alat untuk mengatur kegiatan ekonomi. 
                 Pemerintah dapat memberlakukan tarif pajak yang berbeda-beda untuk mendorong 
@@ -178,7 +178,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <center><div class="icon"><i class="bx bx-file"></i></div></center>
               <h4><a href="">Stabilitas Fiskal</a></h4>
               <p>Pajak berperan dalam menjaga keseimbangan antara penerimaan dan pengeluaran pemerintah, 
                 yang dikenal sebagai stabilitas fiskal. Penerimaan pajak yang memadai memungkinkan
@@ -192,7 +192,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <center><div class="icon"><i class="bx bx-tachometer"></i></div></center>
               <h4><a href="">Redistribusi Kekayaan</a></h4>
               <p>Pajak juga dapat digunakan untuk mencapai tujuan redistribusi kekayaan dalam masyarakat. 
                 Dengan menerapkan pajak progresif, di mana individu dengan pendapatan yang lebih tinggi 
@@ -206,7 +206,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-layer"></i></div>
+              <center><div class="icon"><i class="bx bx-layer"></i></div></center>
               <h4><a href="">Stimulus Ekonomi</a></h4>
               <p>Pajak juga dapat digunakan sebagai alat stimulus ekonomi dalam situasi ketidakstabilan 
                 ekonomi. Pemerintah dapat mengurangi tarif pajak atau memberikan insentif pajak kepada 
@@ -257,7 +257,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
         <div class="row" >
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"></div>
               <h4><a href="">Pajak Penghasilan (PPh)</a></h4>
               <p>Pajak ini dikenakan pada pendapatan individu dan perusahaan. 
                 Tarif PPh dapat bervariasi tergantung pada jumlah pendapatan yang diterima.</p>
@@ -266,7 +266,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"></div>
               <h4><a href="">Pajak Pertambahan Nilai (PPN)</a></h4>
               <p>Pajak ini dikenakan pada penjualan barang dan jasa. 
                 Tarif PPN saat ini sebesar 10% dan diterapkan pada sebagian besar barang dan jasa konsumsi.</p>
@@ -275,7 +275,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"></div>
               <h4><a href="">Pajak Bumi dan Bangunan (PBB)</a></h4>
               <p>Pajak ini dikenakan pada kepemilikan properti seperti tanah dan bangunan. 
                 Tarif PBB ditentukan berdasarkan nilai properti yang dimiliki.</p>
@@ -284,7 +284,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-layer"></i></div>
+              <div class="icon"></i></div>
               <h4><a href="">Pajak Bea Materai (PBM)</a></h4>
               <p>Pajak ini dikenakan pada dokumen-dokumen hukum, seperti surat-surat perjanjian, kontrak, dan tanda terima. 
                 Tarif pajak bea materai berbeda tergantung pada jenis dokumen yang dikenai pajak.</p>
@@ -394,11 +394,9 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
                hal-hal seputar pajak.
             </p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://twitter.com/ditjenpajakri" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://www.facebook.com/DitjenPajakRI/" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.instagram.com/ditjenpajakri/" class="instagram"><i class="bx bxl-instagram"></i></a>
             </div>
           </div>
         </center>
