--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h3>Pihak Pihak Yang Terkait Dengan Pajak</h3>
             <p class="fst-italic">
-              Pihak yang terkait dalam pajak meliputi:<br>
+              Pihak yang terkait dalam pajak meliputi:<br><br>
 
 1. Pemerintah: Pemerintah memiliki peran sentral dalam menetapkan kebijakan pajak, 
 mengumpulkan pendapatan pajak, dan menggunakan dana tersebut untuk membiayai pengeluaran pemerintah. <br><br>
@@ -352,7 +352,7 @@ bertanggung jawab atas pengumpulan dan penegakan pajak sesuai dengan undang-unda
             pemerintah dapat mempengaruhi kegiatan ekonomi, mendorong pertumbuhan sektor tertentu, 
             dan mengurangi ketimpangan ekonomi. Pajak juga berperan dalam menjaga stabilitas fiskal, 
             yaitu keseimbangan antara penerimaan dan pengeluaran pemerintah. <br><br>
-            Dalam konteks Indonesia, pemerintah terus melakukan reformasi perpajakan untuk 
+            Dalam konteks di Indonesia, pemerintah terus melakukan reformasi perpajakan untuk 
             meningkatkan efektivitas dan efisiensi sistem pajak. Beberapa kebijakan telah dilakukan, 
             seperti pemangkasan tarif pajak penghasilan, perluasan basis pajak, peningkatan 
             kepatuhan pajak, dan peningkatan transparansi. Melalui langkah-langkah ini, diharapkan 
