--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h3 class="logo me-auto"><a href="index.html"></a></h3>
+      <h3 class="logo me-auto"><a href="index.html">Pajak Dalam Stabilisasi Ekonomi</a></h3>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -58,7 +58,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>Pajak Dalam Stabilisasi Ekonomi</h1>
+          <h1>Peran Strategis Pajak Dalam Menstabilkan Ekonomi Nasional</h1>
           <h2>Apa sih Pajak Itu ? Kita simak bersama yuk. </h2>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
