--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
-<html>
-<head>  </head>
-
-<body bgcolor="red">
-<h1><font color="white"><marquee>Top Up Wildal Store
-</marquee></h1> <hr><hr>
-</br>
-
-<h4>
-<Table>
-<li>MLBB</li>
-<ul><a href="https://wa.link/towhc2"> Harga 5 DM 500</a></ul>
-
-<ul><a href="https://wa.link/towhc2"> Harga 10 DM 1000</a></ul>
-
-<li>EPEP</li>
-<ul><a href="https://wa.link/towhc2"> Harga 5 DM 500</a></ul>
-<ul><a href="https://wa.link/towhc2"> Harga 10 DM 1000</a></ul>
-
-<li>SOSIS MAN</li>
-<ul><a href="https://wa.link/towhc2"> Harga 5 DM 500</a></ul>
-<ul><a href="https://wa.link/towhc2"> Harga 10 DM 1000</a></ul>
-
-</table>
-<hr>
-<center> <h2>Terima Kasih Telah Order </h2></Center>
-</h4>
-</table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/flowers.png" type="image/x-icon">
+    <title>Flowers 4 U</title>
+</head>
+<body>
+    <audio src="tes.mpeg" autoplay="autoplay"></audio>
+    <div class="greetings">
+    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+        <span>R</span>
+        <span>E</span>
+        <span>T</span>
+        <span>N</span>
+        <span>O</span>
+        <span> </span>
+        <span>G</span>
+        <span>I</span>
+        <span>R</span>
+        <span>I</span>
+    
+    </div>
+    <div class="description">
+        <span>HAPPY GRADUATION</span>
+    </div>
+    <div class="description">
+        <span>Saya punya hadiah buat kamu.</span>
+    </div>
+    <div class="button">
+        <button>
+            <a href="flower.html">Click Meee</a>
+        </button>
+        
+    </div>
 </body>
-</htmL>
+</html>
