--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Flowers 4 U</title>
 </head>
 <body>
-    <audio src="tes.mpeg" autoplay="autoplay"></audio>
+    <audio src="tes.mp3" autoplay="autoplay"></audio>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>R</span>
