--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Flowers 4 U</title>
 </head>
 <body>
-    <audio src="tes.mp3" autoplay="autoplay"></audio>
+    <audio hidden autoplay loop>
+    <source src="https://github.com/wildanfathoni18.github.io/tes.mp3" type="audio/mpeg">
+  </audio>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>R</span>
