--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <audio hidden autoplay loop>
-    <source src="https://github.com/WildanFathoni18/wildanfathoni18.github.io/tes.mp3" type="audio/mp3">
+    <source src="https://github.com/WildanFathoni18/wildanfathoni18.github.io/tes.mp3" type="audio/mpeg">
   </audio>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
