--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Flowers 4 U</title>
 </head>
 <body>
-    <audio hidden autoplay loop>
-    <source src="https://github.com/WildanFathoni18/wildanfathoni18.github.io/tes.mp3" type="audio/mpeg">
+    <audio>
+    <source src="https://github.com/WildanFathoni18/wildanfathoni18.github.io/tes.mp3" type="audio/mpeg" autoplay loop>
   </audio>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
