--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Flowers 4 U</title>
 </head>
 <body>
-    <audio>
-    <source src="tes.mp3" type="audio/mpeg" autoplay loop>
+    <audio autoplay loop>
+    <source src="tes.mp3" type="audio/mpeg">
   </audio>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
