--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <title>Flowers 4 U</title>
 </head>
 <body>
-    <audio autoplay loop>
-    <source src="tes.mp3" type="audio/mpeg">
-  </audio>
+   <meta charset="utf-8">    <audio controls autoplay>
+        <source src="https://github.com/WildanFathoni18/wildanfathoni18.github.io/tes.mp3" type="audio/mpeg">
+        <!--Tulisan akan muncul jika tak ada file yang didukung oleh browser -->
+        <p>
+            Audio tidak disupport browser
+        </p>
+    </audio>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>R</span>
