--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Flowers 4 U</title>
 </head>
 <body>
-    <audio controls>
+    <audio autoplay="true" loop="true">
         <source src="audio/tes.mp3" type="audio/mpeg">
     </audio>
     <div class="greetings">
