--- a/index.html
+++ b/index.html
@@ -14,16 +14,12 @@
     </audio>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>R</span>
-        <span>E</span>
-        <span>T</span>
+        <span>A</span>
+        <span>D</span>
+        <span>I</span>
         <span>N</span>
-        <span>O</span>
-        <span> </span>
-        <span>G</span>
-        <span>I</span>
-        <span>R</span>
-        <span>I</span>
+        <span>D</span>
+        <span>A</span>
     
     </div>
     <div class="description">
