--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>A</span>
-        <span>D</span>
-        <span>I</span>
-        <span>N</span>
-        <span>D</span>
+        <span>L</span>
+        <span>M</span>
         <span>A</span>
     
     </div>
     <div class="description">
-        <span>HAPPY GRADUATION</span>
+        <span>SEMANGAT DAPETIN GELAR DRG NYA <3</span>
     </div>
     <div class="description">
         <span>Saya punya hadiah buat kamu.</span>
