--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     </audio>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+        <span>C</span>
         <span>A</span>
-        <span>L</span>
-        <span>M</span>
+        <span>C</span>
         <span>A</span>
     
     </div>
     <div class="description">
-        <span>SEMANGAT DAPETIN GELAR DRG NYA <3</span>
+        <span>SEMANGAT KULIAHNYA <3</span>
     </div>
     <div class="description">
         <span>Saya punya hadiah buat kamu.</span>
